GST.GearShift/GearShift_CommLibrary/GearShiftCommLib/CAN_Functionality.h

  extern "C" __declspec( dllexport ) UINT32   UsbCANGetDevRxBuffFill( void );
  extern "C" __declspec( dllexport ) UINT32   UsbCANGetDevRxBuffSize( void );
  extern "C" __declspec( dllexport ) UINT32   UsbCANGetUsbDevTxBuffFill( void );
  extern "C" __declspec( dllexport ) UINT32   UsbCANGetUsbDevTxBuffSize( void );
  extern "C" __declspec( dllexport ) UINT32   UsbCANGetUsbDevRxBuffFill( void );
  extern "C" __declspec( dllexport ) UINT32   UsbCANGetUsbDevRxBuffSize( void );
  extern "C" __declspec( dllexport ) void     UsbCANWriteData( TUsbCANData * data, UINT32 num, UINT32 *wrNum );
  extern "C" __declspec( dllexport ) void     UsbCANReadData( TUsbCANData * data, UINT32 num, UINT32 *rdNum );
  extern "C" __declspec( dllexport ) UINT32   UsbCANSetConfig( UINT32 busBaud, double *baudError  );
  extern "C" __declspec( dllexport ) UINT32   UsbCANDisableComm( void );
  // Enables CAN pull-up
  extern "C" __declspec( dllexport ) UINT32   UsbCanEnablePullUp( void );
  // Disables CAN pull-up
  extern "C" __declspec( dllexport ) UINT32   UsbCanDisablePullUp( void );
  extern "C" __declspec( dllexport ) UINT32   UsbCANResetFixedTrace(void);