GST.GearShift/GearShift_CommLibrary/GearShiftCommLib/OBD_Functionality.h

  typedef struct 
  {
    unsigned char charCount;
    char chars[50];
  } TUsbOBDTxData;
  typedef struct 
  {
    UINT32        srcAddr;
    byte          respToMode;
    byte          respToPID;
    byte          bytesCount;
    unsigned char bytes[50];
  } TUsbOBDRxData;
  extern "C" __declspec( dllexport ) UINT32 UsbOBDGetDevTxBuffFill( void );
  extern "C" __declspec( dllexport ) UINT32 UsbOBDGetDevTxBuffSize( void );
  extern "C" __declspec( dllexport ) UINT32 UsbOBDGetDevRxBuffFill( void );
  extern "C" __declspec( dllexport ) UINT32 UsbOBDGetDevRxBuffSize( void );
  extern "C" __declspec( dllexport )   void UsbOBDWriteData( TUsbOBDTxData * data, unsigned int num, unsigned int * wrNum );
  extern "C" __declspec( dllexport )   void UsbOBDSendCmd( char *cmd );
  extern "C" __declspec( dllexport )   void UsbOBDReadData( TUsbOBDRxData * data, unsigned int num, unsigned int * rdNum );
  extern "C" __declspec( dllexport )    int UsbOBDElm327Init( void );