GST.GearShift/Components/Interfaces/USB/GearShiftUsb_dllImports.cs


    /// <summary>
    /// Gets the number of frames in the CAN RX buffer (from this module)
    /// </summary>
    /// <param name="fill"></param>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern UInt32 UsbCANGetDevRxBuffFill( );

    /// <summary>
    /// Gets the CAN RX buffer size (to receive from this module)
    /// </summary>
    /// <param name="size"></param>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern UInt32 UsbCANGetDevRxBuffSize( );

    /// <summary>
    /// Gets the number of frames in the DEVICE's CAN TX buffer
    /// </summary>
    /// <param name="fill"></param>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    public static extern UInt32 UsbCANGetUsbDevTxBuffFill();

    /// <summary>
    /// Gets the DEVICE's CAN TX buffer size
    /// </summary>
    /// <param name="size"></param>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    public static extern UInt32 UsbCANGetUsbDevTxBuffSize();

    /// <summary>
    /// Gets the number of frames in the DEVICE's CAN RX buffer
    /// </summary>
    /// <param name="fill"></param>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    public static extern UInt32 UsbCANGetUsbDevRxBuffFill();

    /// <summary>
    /// Gets the DEVICE's CAN RX buffer size
    /// </summary>
    /// <param name="size"></param>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    public static extern UInt32 UsbCANGetUsbDevRxBuffSize();

    /// <summary>
    /// Writes CAN data packets to internal buffer.
    /// </summary>
    /// <param name="data">pointer to TUsbCANData array // data array to be written to internal buffer</param>
    /// <param name="num">int variable // number of data packets to write</param>
    /// <param name="wrNum">pointer to int variable // number of data packets written to internal buffer</param>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern void UsbCANWriteData( [In, Out] UsbCANData[] data, UInt32 num, ref UInt32 wrNum );

    /// <summary>
    /// Reads CAN data from internal buffer.
    /// </summary>
    /// <param name="data">data - pointer to TUsbCANRxData array // array to which data from internal buffer should be written</param>
    /// <param name="num">num - int variable // number of bytes that can be written to the "data" array.</param>
    /// <param name="rdNum">rdNum - pointer to int variable // number of bytes that has been written to the "data" array</param>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern void UsbCANReadData( [In, Out] UsbCANData[] data, UInt32 num, ref UInt32 rdNum );

    /// <summary>
    /// Enables CAN pull-up.
    /// </summary>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern UInt32 UsbCanEnablePullUp();

    /// <summary>
    /// Disables CAN pull-up.
    /// </summary>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern UInt32 UsbCanDisablePullUp();

    /// <summary>
    /// Sets CAN config
    /// </summary>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern UInt32 UsbCANSetConfig( UInt32 busBaud, ref Double baudError);

    /// <summary>
    /// Disables the CAN on the device
    /// </summary>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern UInt32 UsbCANDisableComm();

    /// <summary>
    /// Reads the fixed trace recurds table
    /// </summary>
    /// <returns>Number of records written</returns>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern UInt32 UsbCANGetFixedTraceTable(  [In, Out] CANFixedTraceRecord[] data, UInt32 num );

    /// <summary>
    /// Resets the fixed trace timer and table
    /// </summary>
    /// <returns>0- success, 1- failed</returns>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern UInt32  UsbCANResetFixedTrace();

    // Device OBD functionality //---------------------------------------------------------------------//
    //-------------------------------------------------------------------------------------------------//

    /// <summary>
    /// Gets the number of frames in the OBD TX buffer (to be sent to this module)
    /// </summary>
    /// <param name="fill"></param>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern UInt32 UsbOBDGetDevTxBuffFill();

    /// <summary>
    /// Gets the OBD TX buffer size (to transmit to this module)
    /// </summary>
    /// <param name="size"></param>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern UInt32 UsbOBDGetDevTxBuffSize();

    /// <summary>
    /// Gets the number of frames in the OBD RX buffer (from this module)
    /// </summary>
    /// <param name="fill"></param>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern UInt32 UsbOBDGetDevRxBuffFill();

    /// <summary>
    /// Gets the OBD RX buffer size (to receive from this module)
    /// </summary>
    /// <param name="size"></param>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern UInt32 UsbOBDGetDevRxBuffSize();

    /// <summary>
    /// Writes OBD data packets to internal buffer.
    /// </summary>
    /// <param name="data">pointer to TUsbCANData array // data array to be written to internal buffer</param>
    /// <param name="num">int variable // number of data packets to write</param>
    /// <param name="wrNum">pointer to int variable // number of data packets written to internal buffer</param>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern void UsbOBDWriteData( [In, Out] UsbOBDTxData[] data, UInt32 num, ref UInt32 wrNum );
       
    /// <summary>
    /// Reads OBD data from internal buffer.
    /// </summary>
    /// <param name="data">data - pointer to TUsbCANRxData array // array to which data from internal buffer should be written</param>
    /// <param name="num">num - int variable // number of bytes that can be written to the "data" array.</param>
    /// <param name="rdNum">rdNum - pointer to int variable // number of bytes that has been written to the "data" array</param>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern void UsbOBDReadData( [In, Out] UsbOBDRxData[] data, UInt32 num, ref UInt32 rdNum );

    /// <summary>
    /// Sends a single command to the ELM327.
    /// Make sure to call UsbOBDElm327Init() first
    /// </summary>
    /// <param name="cmd">command to send</param>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern void UsbOBDSendCmd( char[] cmd );

    /// <summary>
    /// Initializes the ELM327 and returns status operation
    /// </summary>
    /// <returns>0 - init OK, 1 - init failed</returns>
    [DllImport("GearShiftCommLib.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.Cdecl)]
    private static extern int UsbOBDElm327Init();




    #endregion Imported functions



  }

}
